--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -28,6 +28,8 @@ materialIconsExtended = "1.6.8"
 moshiKotlinVersion = "1.15.1"
 navigationUiKtx = "2.7.7"
 okhttpBom = "4.12.0"
+pagingComposeVersion = "3.3.4"
+pagingCompose = "1.0.0-alpha17"
 roomKtx = "2.6.1"
 sandwichRetrofitVersion = "2.0.6"
 squareupRetrofit = "2.11.0"
@@ -50,6 +52,8 @@ foundationDesktopVersion = "1.7.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-paging-compose = { module = "androidx.paging:paging-compose", version.ref = "pagingCompose" }
+androidx-paging-runtime = { module = "androidx.paging:paging-runtime", version.ref = "pagingComposeVersion" }
 google-accompanist-placeholder-material = { module = "com.google.accompanist:accompanist-placeholder-material", version.ref = "accompanistPlaceholderMaterialVersion" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
